--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ h3{
     transform: scale(1.1);
 }
 
-
 .corpo{
     background-color: #ffffff;
     margin-left: 5vh;
@@ -82,6 +81,7 @@ h3{
     padding: 15px;
     padding-right: none;
     gap: 15PX;
+    box-shadow: 3px 3px 15px #545454;  
 }
 
 .corpo-lateral{
@@ -165,14 +165,12 @@ h3{
     100%{
         box-shadow: 7px 7px 5px 0px rgba(255,0,0,0.4);
     }
-  }
+}
 
 .corpo-principal-item-destaque-img{
     width: 35vh;
     animation: girar 2s linear infinite;
 }
-
-
 
 .corpo-principal-item-destaque-h3{
     font-size: larger;
